# csci344

./: .gitignore  index.html
homework/hw02/hw02/: index.html  styles.css
homework/hw02/hw03/: package.json
lectures/intro-css-gallery/: styles.css
lectures/intro-to-react/: index.html  package-lock.json  package.json
lectures/intro-to-react/src/: App.jsx
lectures/lecture04/: index.html
lectures/lecture07/01-media-query/: style.css
lectures/lecture07/02-flexbox/: styles.css
lectures/lecture07/04-sticky-menu/: index.html
lectures/lecture07/05-hw02-starter-code/: index.html  styles.css
lectures/lecture10/01-warmup/: main.js
lectures/lecture10/02-style-property-demo/: index.html  main.js
lectures/lecture10/04-all-of-the-above/: main.js
lectures/lecture13/: 02-map-demo.js  03-filter-demo.js  06-practice.js
lectures/lecture15/external-apis/: 02-spotify-fetch.js  03-nasa-fetch.js
lectures/lecture15/photo-app/: create-post.js
lectures/lecture19/: in_class_challenges.py
lectures/lecture19/models/: user.py
practice-quiz01/: index.html
practicequizzes/practice-quiz01/: style.css
practicequizzes/quiz02/task01/: main.js
practicequizzes/quiz02/task02/: index.html  (+1 more)
quiz02/exercise01/: main.js
quiz02/exercise02/: main.js
quiz02/exercise04/: main.js
quiz02/exercise05/: main.js
quiz02/exercise06/: index.js
quizzes/quiz01/: index.html  styles.css
tutorials/tutorial03/: index.html  package-lock.json  package.json
tutorials/tutorial04/: main.js
tutorials/tutorial06/: index.html  main.js
tutorials/tutorial09/: app.py  pyproject.toml
(+26 files in other folders)
