[project]
name = "tutorial09"
version = "0.1.0"
description = ""
package-mode = false
authors = [
    {name = "Sarah",email = "svanwart@unca.edu"}
]
requires-python = ">=3.9"
dependencies = [
    "flask (>=3.1.0,<4.0.0)",
    "requests (>=2.32.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,>=3.0.0"]
build-backend = "poetry.core.masonry.api"
